@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.filmfriend" name="Filmfriend.de" version="1.0.0" provider-name="sarbes">
+<addon id="plugin.video.filmfriend" name="Filmfriend.de" version="1.0.1" provider-name="Ingo-FP-Angel, sarbes">
     <requires>
 		<import addon="xbmc.python" version="3.0.0"/>
 		<import addon="script.module.libmediathek4" version="1.0.0"/>
+		<import addon="script.module.pyjwt" version="1.7.1"/>
 		<import addon="script.module.requests" version="2.19.1"/>
 		<import addon="inputstream.adaptive" version="2.5.4"/>
     </requires>
@@ -11,16 +12,17 @@
     </extension>
     <extension point="xbmc.addon.metadata">
         <platform>all</platform>
-		<language>en de fr</language>
+		<language>en de</language>
 		<license>GPL-2.0-only</license>
-        <forum>https://forum.kodi.tv/showthread.php?tid=353903</forum>
-		<source>https://github.com/sarbes/plugin.video.filmfriend</source>
+        <forum>https://forum.kodi.tv/showthread.php?tid=374894</forum>
+        <source>https://github.com/Ingo-FP-Angel/plugin.video.filmfriend_de</source>
         <website>https://www.filmfriend.de/</website>
         <summary lang="en_GB">This video add-on provides access to shows and movies of Filmfriend.de.</summary>
-        <description lang="en_GB">This video add-on provides access to shows and movies of Filmfriend.de. A valid library account is reqired in order to use this add-on.</description>
+        <description lang="en_GB">This video add-on provides access to shows and movies of Filmfriend.de. A valid library account is required in order to use this add-on.</description>
+        <disclaimer lang="en_GB">This add-on is a fork of the not actively maintained "plugin.video.filmfriend" by sarbes.</disclaimer>
         <summary lang="de_DE">Dieses Add-on bietet Zugriff auf Filme und Serien von Filmfriend.de.</summary>
         <description lang="de_DE">Dieses Add-on bietet Zugriff auf Filme und Serien von Filmfriend.de. Ein Bibliotheksaccount ist zur Nutzung dieses Dienstes nötig.</description>
-        <disclaimer lang="de_DE">Dieses Add-on ist inoffiziell.</disclaimer>
+        <disclaimer lang="de_DE">Dieses Add-on ist ein Fork des nicht mehr aktiv weiterentwickelten "plugin.video.filmfriend" von sarbes.</disclaimer>
         <assets>
             <icon>resources/icon.png</icon>
             <fanart>resources/fanart.png</fanart>
